# ab-testing-framework

./: .gitignore  .pre-commit-config.yaml  LICENSE  MEMO.md  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
outputs/: 01_design_summary.txt  DECISION_DOC.md
src/: 01_design.py  02_simulate.py  03_validity_checks.py  04_analyze.py  stats.py
