[project]
name = "ab-testing-framework"
version = "0.1.0"
description = "Full A/B testing lifecycle — power, SRM, CUPED, Benjamini-Hochberg, written ship/no-ship decision."
authors = [{ name = "Lucca Cesar", email = "luccamariz01@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "ruff>=0.6,<1.0",
  "pytest>=8,<9",
  "pre-commit>=3.8,<5",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "data", "outputs", "build", "dist"]

[tool.ruff.lint]
# Keep lenient: imports + obvious bugs + naming. No formatting strictness.
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E501"]  # line length is enforced by formatter

[tool.ruff.lint.per-file-ignores]
"src/0*.py" = ["E402"]  # script-style files with module-level work after imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests", "src"]
